package com.biteplate.pattern.observer;

public interface SystemObserver {
    void update(String eventType, String message);
}
